Swapped papers around for a better order.

--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -58,20 +58,21 @@
 
 \mainmatter
 
-\chapter{Detection of Low-Mass-ratio Stellar Binary Systems}
-This chapter was previously published \citep{Gullikson2013_2}. The co-author, Sarah Dodson-Robinson, was my advisor at the time and provided much of the idea for the project.
+\chapter{Introduction}
+Discuss why binary stars are interesting/important
 
-\include{paper1}
+Discuss traditional detection methods.
 
-\chapter{Future Direct Spectroscopic Detection of Hot Jupiters with IGRINS}
-This chapter was previously published \citep{Gullikson2013}. The co-author, Mike Endl, was my co-supervisor at the time and provided much of the inspiration for the work as well as a great deal of technical assistance.
+\chapter{Direct Spectral Detection: An Efficient Method to Detect and Characterize Binary Systems}
+This chapter was previously published \citep{Gullikson2016}. Adam Kraus and Sarah Dodson-Robinson were both my advisors for part of the time that I spent developing the method outlined below. They provided much of the inspiration for the method and technical advice. Daniel Jaffe is the principal investigator for one of the instruments used in this work, the IGRINS spectrograph. The rest of the authors provided data that I used to calibrate the method.
 
-\include{paper2}
+\include{paper5}
 
 \chapter{Correcting for Telluric Absorption: Methods, Case Studies, and Release of the TelFit Code}
 This chapter was previously published \citep{Gullikson2014}. Both co-authors were my advisor at some point while I was developing this code. They helped guide the code requirements and provided a science case study for the work. Adam Kraus provided observational data for the case study.
 
 \include{paper3}
+
 
 \chapter{Mining Planet Search Data for Binary Stars: The $\psi^1$ Draconis system}
 This chapter was previously published \citep{Gullikson2015}. The co-authors noticed a trend in the data, and suggested I look into it with the methodology I developed. They obtained the majority of the data used in the work.
@@ -79,10 +80,15 @@ This chapter was previously published \citep{Gullikson2015}. The co-authors noti
 \include{paper4}
 
 
-\chapter{Direct Spectral Detection: An Efficient Method to Detect and Characterize Binary Systems}
-This chapter was previously published \citep{Gullikson2016}. Adam Kraus and Sarah Dodson-Robinson were both my advisors for part of the time that I spent developing the method outlined below. They provided much of the inspiration for the method and technical advice. Daniel Jaffe is the principal investigator for one of the instruments used in this work, the IGRINS spectrograph. The rest of the authors provided data that I used to calibrate the method.
+\chapter{Future Direct Spectroscopic Detection of Hot Jupiters with IGRINS}
+This chapter was previously published \citep{Gullikson2013}. The co-author, Mike Endl, was my co-supervisor at the time and provided much of the inspiration for the work as well as a great deal of technical assistance.
 
-\include{paper5}
+\include{paper2}
+
+\chapter{Detection of Low-Mass-ratio Stellar Binary Systems}
+This chapter was previously published \citep{Gullikson2013_2}. The co-author, Sarah Dodson-Robinson, was my advisor at the time and provided much of the idea for the project.
+
+\include{paper1}
 
 
 %\begin{appendix}
