--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -12,13 +12,15 @@
 %\usepackage[hidelinks,pagebackref]{hyperref} % Handy for links, can comment for plain PDF
 \bibliographystyle{aasjournal}
 
+\DeclareMathOperator\erf{erf}
+\providecommand{\e}[1]{\ensuremath{\times 10^{#1}}}
+
 \UTyear=2016
 
 \makeindex
 
 %\graphicspath{{./Figures/}}
 
-\providecommand{\e}[1]{\ensuremath{\times 10^{#1}}}
 
 \begin{document}
 
@@ -59,36 +61,81 @@
 \mainmatter
 
 \chapter{Introduction}
-Discuss why binary stars are interesting/important
 
-Discuss traditional detection methods.
+Stellar multiplicity is an inevitable and common outcome of star formation, with roughly half of all solar-type field stars in binary or multiple systems \citep{Raghavan2010} and an even higher fraction as the stellar mass increases \citep{Zinnecker2007}. Young stellar associations and clusters tend to have even higher multiplicity \citep{Duchene2013}, indicating that stars often form in multiple systems that are subsequently destroyed by dynamical interactions as the cluster dissociates. 
+
+The overall multiplicity rate and the distributions of mass ratio, period, and eccentricity of a binary star population place important constraints on the mode of binary star formation. While the period and eccentricity are altered by dynamical processing in the birth cluster, the present-day mass ratio of a binary system is a direct result of its formation \citep{Parker2013}. Most binary stars are thought to form via core fragmentation \citep{Boss1979, Boss1986, Bate1995}, in which a collapsing core fragments into two or more individual protostars. The number and initial masses of the fragments are set by the total core mass, as well as its rotation, turbulence, and its temperature and density structure. If the fragments are well separated ($a \gtrsim 1000$ AU), they will evolve independently of each other, accreting mass from the core material onto their own protostellar disks and then onto the protostars themselves. However, close fragments ($a \sim 100$ AU) will interact with each other; the protostellar disk may be truncated, destabilized, or form into a circumbinary disk if the separation is small enough \citep{Bate1997}. In addition, an unstable disk can fragment to form low-mass companions \citep{Kratter2006, Stamatellos2011}. The mass ratios of close companions formed via either mechanism should be affected by preferential accretion. Most work has suggested that the disk material will preferentially accrete onto the lower mass companion as it migrates inward \citep{Bate1997, BBB2002}.
+
+\section{Detection Methods}
+
+There are three main main methods traditionally used to search for companions to stars, whether they be stellar or planetary companions. The first is direct imaging, in which we take an image of the star and look for nearby point sources in the image. This can be either seeing-limited, in which case it is difficult to find companions inside $1''$ of the primary, or with adaptive optics systems on large-aperture telescopes. We can detect companions out to a few hundred mas from the primary with adaptive optics imaging methods \citep[see][for typical sensitivity curves]{DeRosa2014}, and even closer with more time-consuming and complicated observational techniques such as angular differential imaging [CITE]. 
+
+The second detection method is interferometry, in which multiple multiple beams of light from the source are allowed to constructively or destructively interfere with each other before recording the light. In some cases, interferometry is done with multiple telescopes separated by several tens of meters, producing an effective aperture much larger than can be produced as a single mirror. In other cases, a mask is introduced in front of a single telescope to only allow light from certain beams through. Interferometry can usually achieve smaller working angles than imaging, but cannot achieve as high contrast \citep[see e.g.][]{Aldoretta2015}.
+
+The final traditional method useful in searching for stellar companions is radial velocity monitoring, in which the radial velocity of the star is measured many times over periods of years to decades. An unseen companion will cause the radial velocity of the primary star to oscillate. Unlike the previous two methods, the radial velocity method has no inner working angle; in fact, it works best at finding very close companions. The sensitivity falls off as the companion orbital separation increases, because the signal induced on the primary star decreases. The sensitivity also falls off as the number of spectral lines in the primary star spectrum falls, and as it rotation speed ($v\sin{i}$) increases. Careful radial velocity monitoring surveys are capable of detecting motion as small as $\sim 1 \mathrm{m\ s}^{-1}$ when observing slowly rotating solar-type stars \citep[e.g.][]{Wittenmyer2006, Fischer2009, Pepe2011}, but have difficulty achieving better than $\sim 1 \mathrm{km\ s}^{-1}$ when observing rapidly rotating hot stars [CITE].
+
+Both imaging and interferometry can usually characterize the companion in a single image, provided the primary star parameters are sufficiently well-known. However, radial velocity monitoring is usually only capable of measuring the the minimum mass of the companion ($M_2\sin{i}$), and only after monitoring the system for $1-2$ orbital periods. For companions on long-period ($\sim 10$ years) orbits, it is an extremely time-consuming method. In Chapter \ref{chap:dsd}, we introduce a spectroscopic method that is capable of both detecting and characterizing close companions in single observations.
+
+
+\section{Previous Observational Results}
+
+The mass ratio, period, and eccentricity distributions are fairly well-known for solar type stars \citep{Duquennoy1991, Raghavan2010} and cooler stars \citep{Fischer1992, Delfosse2004}. Interestingly, the mass-ratio distribution appears to be invariant to separation for these stars \citep{Meyer2013}, contrary to the theoretical expectations. All of the distributions are much less certain for more massive stars. The reason for this is two-fold: first, more massive stars tend to more rare and farther away, meaning many of the companions are angularly close to the very bright primaries and difficult to detect with imaging techniques. Second, the primary stars tend to be rapid rotators, which limits radial velocity precision to $\sim 1 \mathrm{km\ s}^{-1}$. Additionally, detecting the companion spectrum suffers from the same flux-ratio difficulties as imaging methods.
+
+Nonetheless, \citet{DeRosa2014} performed an adaptive optics imaging survey of nearby A-type stars, and found that the mass-ratio distribution is well-described by a power law with large slope, indicating a very strong preference for low-mass companions. They also found initial evidence that the mass-ratio distribution for companions inside $125$ AU has a much shallower power law slope than that of wide companions, and is consistent with flat. Their close companion subsample contained only 18 binary systems, and the result is complicated by the inherent difficulty of detecting close companions with low mass ratios in an imaging survey. 
+
+Radial velocity monitoring surveys can detect much closer companions than imaging surveys, but are typically only complete to low-mass companions if the primary is a slow rotator. Chemically peculiar Am stars are typically associated with binary companions, and are slow rotators due to tidal braking; they thus form a highly biased sample of intermediate-mass stars. Nonetheless, it is interesting to note that they have a mass-ratio distribution which peaks near $q \sim 0.5$ \citep{Vuissoz2004}, an entirely different form than the distribution found around chemically normal stars at wide separations.
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Direct Spectral Detection: An Efficient Method to Detect and Characterize Binary Systems}
+\label{chap:dsd}
 This chapter was previously published \citep{Gullikson2016}. Adam Kraus and Sarah Dodson-Robinson were both my advisors for part of the time that I spent developing the method outlined below. They provided much of the inspiration for the method and technical advice. Daniel Jaffe is the principal investigator for one of the instruments used in this work, the IGRINS spectrograph. The rest of the authors provided data that I used to calibrate the method.
 
 \include{paper5}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \chapter{Correcting for Telluric Absorption: Methods, Case Studies, and Release of the TelFit Code}
+\label{chap:telfit}
 This chapter was previously published \citep{Gullikson2014}. Both co-authors were my advisor at some point while I was developing this code. They helped guide the code requirements and provided a science case study for the work. Adam Kraus provided observational data for the case study.
 
 \include{paper3}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 \chapter{Mining Planet Search Data for Binary Stars: The $\psi^1$ Draconis system}
+\label{chap:psi1dra}
 This chapter was previously published \citep{Gullikson2015}. The co-authors noticed a trend in the data, and suggested I look into it with the methodology I developed. They obtained the majority of the data used in the work.
 
 \include{paper4}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 \chapter{Future Direct Spectroscopic Detection of Hot Jupiters with IGRINS}
+\label{chap:hotjup}
 This chapter was previously published \citep{Gullikson2013}. The co-author, Mike Endl, was my co-supervisor at the time and provided much of the inspiration for the work as well as a great deal of technical assistance.
 
 \include{paper2}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \chapter{Detection of Low-Mass-ratio Stellar Binary Systems}
+\label{chap:pilot}
 This chapter was previously published \citep{Gullikson2013_2}. The co-author, Sarah Dodson-Robinson, was my advisor at the time and provided much of the idea for the project.
 
 \include{paper1}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\chapter{The Inner Mass-Ratio Distribution of Intermediate-Mass Stars}
+\label{chap:survey}
+
+\include{paper6}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 %\begin{appendix}
