Put chapter headings in included files.

--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -66,6 +66,8 @@ Stellar multiplicity is an inevitable and common outcome of star formation, with
 
 The overall multiplicity rate and the distributions of mass ratio, period, and eccentricity of a binary star population place important constraints on the mode of binary star formation. While the period and eccentricity are altered by dynamical processing in the birth cluster, the present-day mass ratio of a binary system is a direct result of its formation \citep{Parker2013}. Most binary stars are thought to form via core fragmentation \citep{Boss1979, Boss1986, Bate1995}, in which a collapsing core fragments into two or more individual protostars. The number and initial masses of the fragments are set by the total core mass, as well as its rotation, turbulence, and its temperature and density structure. If the fragments are well separated ($a \gtrsim 1000$ AU), they will evolve independently of each other, accreting mass from the core material onto their own protostellar disks and then onto the protostars themselves. However, close fragments ($a \sim 100$ AU) will interact with each other; the protostellar disk may be truncated, destabilized, or form into a circumbinary disk if the separation is small enough \citep{Bate1997}. In addition, an unstable disk can fragment to form low-mass companions \citep{Kratter2006, Stamatellos2011}. The mass ratios of close companions formed via either mechanism should be affected by preferential accretion. Most work has suggested that the disk material will preferentially accrete onto the lower mass companion as it migrates inward \citep{Bate1997, BBB2002}.
 
+TODO: Discuss planet motivation
+
 \section{Detection Methods}
 
 There are three main main methods traditionally used to search for companions to stars, whether they be stellar or planetary companions. The first is direct imaging, in which we take an image of the star and look for nearby point sources in the image. This can be either seeing-limited, in which case it is difficult to find companions inside $1''$ of the primary, or with adaptive optics systems on large-aperture telescopes. We can detect companions out to a few hundred mas from the primary with adaptive optics imaging methods \citep[see][for typical sensitivity curves]{DeRosa2014}, and even closer with more time-consuming and complicated observational techniques such as angular differential imaging [CITE]. 
@@ -87,47 +89,41 @@ Radial velocity monitoring surveys can detect much closer companions than imagin
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Chapter 1
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Direct Spectral Detection: An Efficient Method to Detect and Characterize Binary Systems}
-\label{chap:dsd}
-This chapter was previously published \citep{Gullikson2016}. Adam Kraus and Sarah Dodson-Robinson were both my advisors for part of the time that I spent developing the method outlined below. They provided much of the inspiration for the method and technical advice. Daniel Jaffe is the principal investigator for one of the instruments used in this work, the IGRINS spectrograph. The rest of the authors provided data that I used to calibrate the method.
 
 \include{paper5}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Chapter 2
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Correcting for Telluric Absorption: Methods, Case Studies, and Release of the TelFit Code}
-\label{chap:telfit}
-This chapter was previously published \citep{Gullikson2014}. Both co-authors were my advisor at some point while I was developing this code. They helped guide the code requirements and provided a science case study for the work. Adam Kraus provided observational data for the case study.
 
 \include{paper3}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Chapter 3
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
-\chapter{Mining Planet Search Data for Binary Stars: The $\psi^1$ Draconis system}
-\label{chap:psi1dra}
-This chapter was previously published \citep{Gullikson2015}. The co-authors noticed a trend in the data, and suggested I look into it with the methodology I developed. They obtained the majority of the data used in the work.
 
 \include{paper4}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Chapter 4
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
-\chapter{Future Direct Spectroscopic Detection of Hot Jupiters with IGRINS}
-\label{chap:hotjup}
-This chapter was previously published \citep{Gullikson2013}. The co-author, Mike Endl, was my co-supervisor at the time and provided much of the inspiration for the work as well as a great deal of technical assistance.
 
 \include{paper2}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\chapter{Detection of Low-Mass-ratio Stellar Binary Systems}
-\label{chap:pilot}
-This chapter was previously published \citep{Gullikson2013_2}. The co-author, Sarah Dodson-Robinson, was my advisor at the time and provided much of the idea for the project.
+% Chapter 5
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \include{paper1}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Chapter 6
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{The Inner Mass-Ratio Distribution of Intermediate-Mass Stars}
