--- a/paper1.tex
+++ b/paper1.tex
@@ -1,3 +1,10 @@
+
+
+\chapter{Detection of Low-Mass-ratio Stellar Binary Systems}
+\label{chap:pilot}
+This chapter was previously published \citep{Gullikson2013_2}. The co-author, Sarah Dodson-Robinson, was my advisor at the time and provided much of the idea for the project.
+
+
 \section{Introduction}
 O- and B-type stars are often found in binary or
 multiple systems: \cite{Mason2009} estimate that at least $57\%$ of O-stars are
