--- a/paper2.tex
+++ b/paper2.tex
@@ -1,3 +1,10 @@
+
+
+\chapter{Future Direct Spectroscopic Detection of Hot Jupiters with IGRINS}
+\label{chap:hotjup}
+This chapter was previously published \citep{Gullikson2013}. The co-author, Mike Endl, was my co-supervisor at the time and provided much of the inspiration for the work as well as a great deal of technical assistance.
+
+
 \section{Introduction}
 With about 700 confirmed extrasolar planets \citep[from
 exoplanets.org:][]{exoplanet}, the time for characterization of these
