--- a/paper4.tex
+++ b/paper4.tex
@@ -1,5 +1,9 @@
 
 
+\chapter{Mining Planet Search Data for Binary Stars: The $\psi^1$ Draconis system}
+\label{chap:psi1dra}
+This chapter was previously published \citep{Gullikson2015}. The co-authors noticed a trend in the data, and suggested I look into it with the methodology I developed. They obtained the majority of the data used in the work.
+
 \section{Introduction}
 \label{paper4_sec:intro}
 Several groups \citep[e.g.][]{Wittenmyer2006, Fischer2009, Pepe2011} have used the radial velocity method to search for planets around nearby stars for well over a decade, and have collectively uncovered several hundred planets to date. Close binary stars are usually cut from the star sample because they complicate the detection method \citep[e.g.][]{Bergmann2015}, and because they have long been suspected to inhibit planet formation by quickly destroying \citep{Kraus2012} or depleting \citep{Harris2012} the planet-forming disk.
