Intro flows reasonably well into chapter 1.

--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -66,7 +66,11 @@ Stellar multiplicity is an inevitable and common outcome of star formation, with
 
 The overall multiplicity rate and the distributions of mass ratio, period, and eccentricity of a binary star population place important constraints on the mode of binary star formation. While the period and eccentricity are altered by dynamical processing in the birth cluster, the present-day mass ratio of a binary system is a direct result of its formation \citep{Parker2013}. Most binary stars are thought to form via core fragmentation \citep{Boss1979, Boss1986, Bate1995}, in which a collapsing core fragments into two or more individual protostars. The number and initial masses of the fragments are set by the total core mass, as well as its rotation, turbulence, and its temperature and density structure. If the fragments are well separated ($a \gtrsim 1000$ AU), they will evolve independently of each other, accreting mass from the core material onto their own protostellar disks and then onto the protostars themselves. However, close fragments ($a \sim 100$ AU) will interact with each other; the protostellar disk may be truncated, destabilized, or form into a circumbinary disk if the separation is small enough \citep{Bate1997}. In addition, an unstable disk can fragment to form low-mass companions \citep{Kratter2006, Stamatellos2011}. The mass ratios of close companions formed via either mechanism should be affected by preferential accretion. Most work has suggested that the disk material will preferentially accrete onto the lower mass companion as it migrates inward \citep{Bate1997, BBB2002}.
 
-TODO: Discuss planet motivation
+Intermediate-mass stars have recently seen a revival of interest as potentially young planet hosts, spurred largely by the detection of planets orbiting nearby \mbox{$\sim2 M_{\odot}$} stars on both wide \citep[e.g.][]{Lagrange2010, Marois2008} and close \citep{Johnson2011} orbits. Since the main sequence lifetime of an A- or B-type star is tens to hundreds of Myrs, a planetary companion would still be bright and easier to detect with direct imaging techniques [CITE] than the same companion orbiting an old, solar-type star. Robust age estimates for nearby intermediate-mass stars are therefore very important to convert the companion brightness into a mass estimate. 
+
+In the context of planetary companions, stellar-mass binary companions are contaminants; companions complicate radial velocity planet searches because they necessitate simultaneous modeling of both stellar motions \citep[e.g.][]{Bergmann2015}. Likewise, companions complicate direct imaging planet searches by requiring either extremely high-contrast instrumentation \citep{Thalmann2014} or specialized coronagraphs \citep{Crepp2010}. 
+
+However, known binary stars are typically avoided in planet search programs for a more fundamental reason: the binary companion depletes or destroys the planet-forming disk. By combining a binary census of the $\sim 2$ Myr Taurus-Auriga star-forming region with a disk census of the same, \cite{Kraus2012} showed that close ($\lesssim 40$ AU) binaries are about 2-3 times less likely to host a protoplanetary disk, and so hasten disk dispersal. Even if a disk survives, it tends to be depleted in mass by a factor of $\sim 25$ for binary separations $\lesssim 30$ AU \citep{Harris2012}. A full binary census focusing on companions within $\sim 100$ AU is therefore necessary in order to generate a direct-imaging planet search sample.
 
 \section{Detection Methods}
 
