--- a/paper5.tex
+++ b/paper5.tex
@@ -3,31 +3,24 @@
 This chapter was previously published \citep{Gullikson2016}. Adam Kraus and Sarah Dodson-Robinson were both my advisors for part of the time that I spent developing the method outlined below. They provided much of the inspiration for the method and technical advice. Daniel Jaffe is the principal investigator for one of the instruments used in this work, the IGRINS spectrograph. The rest of the authors provided data that I used to calibrate the method.
 
 \section{Introduction}
-
-
 \label{paper5_sec:intro}
-There has recently been a revival of interest in the multiplicity properties of intermediate-mass stars,  spurred largely by the detection of planets orbiting nearby \mbox{$\sim2 M_{\odot}$} stars on both wide \citep[e.g.][]{Lagrange2010, Marois2008} and close \citep{Johnson2011} orbits. In this context, binary companions are contaminants; companions complicate radial velocity planet searches because they necessitate simultaneous modeling of both stellar motions \citep[e.g.][]{Bergmann2015}. Likewise, companions complicate direct imaging planet searches by requiring either extremely high-contrast instrumentation \citep{Thalmann2014} or specialized coronagraphs \citep{Crepp2010}. 
 
-However, known binary stars are typically avoided in planet search programs for a more fundamental reason: the binary companion depletes or destroys the planet-forming disk. By combining a binary census of the $\sim 2$ Myr Taurus-Auriga star-forming region with a disk census of the same, \cite{Kraus2012} showed that close ($\lesssim 40$ AU) binaries are about 2-3 times less likely to host a protoplanetary disk, and so hasten disk dispersal. Even if a disk survives, it tends to be depleted in mass by a factor of $\sim 25$ for binary separations $\lesssim 30$ AU \citep{Harris2012}.
-%[CITE KRAUS PAPER] performed a search for binary companions among Kepler planet host stars, and found that the presence of a companion within 5-50AU suppresses planet formation by a factor of $\sim 4$. 
-
-Multiplicity is an inevitable outcome of star formation, especially for more massive stars where multiplicity is more common \citep{Zinnecker2007}, and so is important to study in its own right. Beyond the overall multiplicity rate, the mass ratio, period, and eccentricity distributions of a binary star population can place important constraints on the mode of binary star formation. Specifically, a mass-ratio distribution that changes with physical separation could indicate that secondary stars are either forming through disk fragmentation \citep[e.g.][]{Kratter2006, Stamatellos2011}  or are accreting a significant amount of their mass from the primary star disk. \cite{DeRosa2014} recently completed an imaging survey of nearby A-type stars, and found preliminary evidence that the mass-ratio distribution does in fact become flatter for closer companions. There is no evidence of such a change for solar-type or later stars \citep{Meyer2013}.
 
 It is difficult to detect low-mass companions very near an intrinsically bright primary star and even more difficult to characterize the companion. There are three commonly used techniques for binary star searches: direct imaging with adaptive optics systems,  interferometry, and radial velocity monitoring. Imaging can easily detect low-mass companions at wide apparent separations, but loses sensitivity as the on-sky distance from the primary star decreases \citep[see][for typical sensitivity curves]{DeRosa2014}. Interferometry can usually achieve smaller working angles than imaging, but cannot achieve as high contrast \citep[see e.g.][]{Aldoretta2015}.
 
- Radial velocity monitoring can easily find companions on very short-period orbits, but its sensitivity to low-mass companions drops as the physical separation increases. This is especially true for A- and B-type stars, where radial velocity precision is typically limited to $\sim 1 \mathrm{km\ s}^{-1}$ by their rotationally broadened lines. Worse, radial velocity monitoring techniques cannot characterize the companion unless the inclination is known or if the companion spectral lines are also visible. All three techniques have separation-dependent sensitivity, which introduces observational bias in any search for a parameter that changes with physical separation.
+ Radial velocity monitoring can easily find companions on very short-period orbits, but its sensitivity to low-mass companions drops as the physical separation increases. This is especially true for A- and B-type stars, where radial velocity precision is typically limited to $\sim 1 \mathrm{km\ s}^{-1}$ by their rotationally broadened lines. Additionally, radial velocity monitoring techniques cannot \emph{characterize} the companion unless the inclination is known or if the companion spectral lines are also visible. All three techniques have separation-dependent sensitivity, which introduces observational bias in any search for a parameter that changes with physical separation.
  
  One technique that is separation independent is to search directly for the composite spectrum of two stars. \citet{Burgasser2007} used single-epoch low-resolution spectroscopy to identify and characterize a brown dwarf binary system by fitting both spectra simultaneously. This method only works if the stars have a similar brightness but very different spectra, such that the spectral features from both components are visible and distinguishable. If, as in the case of binary systems with very large flux ratios, the companion spectrum is buried within the noise of the primary star, a different method is needed.
  
 The direct spectral detection method (hereafter referred to as the DSD method), and variations thereof, has been used to search for binary companions to early B-stars \citep{Gullikson2013}, main sequence FGK-stars \citep{Kolbl2015}, young K-M stars \citep{Prato2002}, and even `Hot Jupiter' type planets \citep{Snellen2010, Brogi2012, deKok2013} orbiting FGK-stars. The method relies on the cross-correlation function (CCF) of a high-spectral-resolution spectrum of the primary star with a model spectrum for the expected companion. The CCF uses every pixel in the spectrum, and more importantly every spectral line in the secondary spectrum. A simple experiment with synthetic spectra containing increasing numbers of spectral lines (N) in noisy data shows that the CCF peak significance increases as $\sim\sqrt{N}$. For high-resolution cross-dispersed \'echelle spectra, this amplification can reach several factors of 10, allowing the detection \emph{and characterization} of a secondary spectrum where the individual lines are completely buried in noise. Since the DSD method uses a seeing-limited spectrum of the primary star, its sensitivity is independent of separation inside $\sim 1 ''$ and can make use of small telescopes to detect high-contrast companions.
 
-In this paper, we describe the DSD method in detail, and use it to detect the secondary star in nine known binary systems. We describe the method in Section \ref{paper5_sec:method}. We describe the observations and data reduction in Section \ref{paper5_sec:obs}, then use the observations to estimate the accuracy with which we can measure the companion temperature in Section \ref{subpaper5_sec:systematics} and the sensitivity of the method in Section \ref{subpaper5_sec:sensitivity}. In Section \ref{paper5_sec:results} we use the DSD method to search for known companions, and discuss the results in Section \ref{paper5_sec:conclusions}.
+In this chapter, we describe the DSD method in detail, and use it to detect the secondary star in nine known binary systems. We describe the method in Section \ref{paper5_sec:method}. We describe the observations and data reduction in Section \ref{paper5_sec:obs}, then use the observations to estimate the accuracy with which we can measure the companion temperature in Section \ref{subpaper5_sec:systematics} and the sensitivity of the method in Section \ref{subpaper5_sec:sensitivity}. In Section \ref{paper5_sec:results} we use the DSD method to search for known companions, and discuss the results in Section \ref{paper5_sec:conclusions}.
 
 
 \section{Direct Spectral Detection Method}
 \label{paper5_sec:method}
 
-All implementations of the DSD method use high-spectral-resolution and high signal-to-noise spectra, and search for companions with extreme flux ratios by cross-correlating the observed spectra with models for the expected companion. The main differences between the various implementations are the primary star and telluric line removal processes. The `Hot Jupiter' searches \citep[e.g.][]{Snellen2010} use known orbital phase information and a high degree of phase coverage to simultaneously estimate an empirical stellar and telluric spectrum with minimal contamination from the planet, while \cite{Kolbl2015} subtract a best-fit model spectrum for the primary star. Since \cite{Kolbl2015} use optical data, they do not attempt any telluric correction. Note that the approach of \cite{Kolbl2015} is conceptually similar to the todcor code \citep{Mazeh1994}, which is widely used to search for double-lined spectroscopic binary systems.
+All implementations of the DSD method use high-spectral-resolution and high signal-to-noise spectra, and search for companions with extreme flux ratios by cross-correlating the observed spectra with models for the expected companion. The main differences between the various implementations are the primary star and telluric line removal processes. The `Hot Jupiter' searches \citep[e.g.][]{Snellen2010} use known orbital phase information and a high degree of phase coverage to simultaneously estimate an empirical stellar and telluric spectrum with minimal contamination from the planet. We discuss similar techniques in Chapters \ref{chap:psi1dra} and \ref{chap:hotjup} of this thesis. \citet{Kolbl2015} use optical data, and remove the primary star spectrum with a best-fit model spectrum; they do not attempt any telluric correction. Note that the approach of \cite{Kolbl2015} is conceptually similar to the todcor code \citep{Mazeh1994}, which is widely used to search for double-lined spectroscopic binary systems.
 
 Unlike most previous work, we focus on not only detecting but accurately characterizing the companion. We additionally optimize our technique for detecting cool companions to rapidly rotating early-type stars, for which it is very difficult to detect the reflex motion of the primary star. We fit and remove the telluric absorption using the TelFit code \citep{Gullikson2014}, and estimate an empirical primary star spectrum with a Gaussian smoothing filter applied to the telluric-corrected data. We chose to use a smoothing filter over subtracting model spectra for two reasons: first, the model spectra are a poor representation of the data, especially at the high signal-to-noise ratios that we use, and so leave very large-scale features in the residual spectrum. Second, the smoothing filter will also remove any large-scale instrumental systematics in the spectrum. We use a smoothing filter with a  window size ($w$) set by
 
