--- a/paper1.tex
+++ b/paper1.tex
@@ -2,7 +2,7 @@
 
 \chapter{Detection of Low-Mass-ratio Stellar Binary Systems}
 \label{chap:pilot}
-This chapter was previously published \citep{Gullikson2013_2}. The co-author, Sarah Dodson-Robinson, was my advisor at the time and provided much of the idea for the project.
+We now turn back to the variant of the direct spectral detection method originally discussed in Chapter \ref{chap:dsd}, in which the targets are very early-type, rapidly-rotating stars. This chapter was previously published \citep{Gullikson2013_2}. The co-author, Sarah Dodson-Robinson, was my advisor at the time and provided much of the idea for the project.
 
 
 \section{Introduction}
