--- a/paper6.tex
+++ b/paper6.tex
@@ -1,8 +1,12 @@
 
+\chapter{The Inner Mass-Ratio Distribution of Intermediate-Mass Stars}
+\label{chap:survey}
+
+Finally, we use the direct spectral detection method to perform a large survey aimed at detected cool companions to hot A- and B-type stars. This chapter has been submitted for publication to the Astronomical Journal.
+
+
 
 \section{Introduction}
-
-
 \label{paper6_sec:intro}
 
 Stellar multiplicity is an inevitable and common outcome of star formation, with roughly half of all solar-type field stars in binary or multiple systems \citep{Raghavan2010} and an even higher fraction as the stellar mass increases \citep{Zinnecker2007}. Young stellar associations and clusters tend to have even higher multiplicity \citep{Duchene2013}, indicating that stars often form in multiple systems that are subsequently destroyed by dynamical interactions as the cluster dissociates. 
